[package]
name = "rustplot"
version = "0.1.0"
authors = ["Michael-Ori <mo3g15@soton.ac.uk>"]
keywords = ["plotting", "graphing"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Michael-Ori/rustplot"
documentation = "https://docs.rs/rustplot"
description = "A simple GUI based plotting library for Rust using GTK and Cairo."

[dependencies]
csv = "0.15.0"
regex = "0.2"
gio = "^0"
gtk = "^0"
cairo-rs = { version = "^0", features = ["png"] }
